Revision history for PDL::NDBin

{{$NEXT}}

 - started using Dist::Zilla for distribution management (Edward Baudrez)

0.004 2013-02-02

 - never released on CPAN

 [API change: preferred interface]
 - the object-oriented interface is now the preferred interface (Edward Baudrez)
 - require the axis specifications in new() to be given as key => value pairs
   (Edward Baudrez)
 - make_labels() has been removed; you should use the method labels() now; call
   as follows:
      my $binner = PDL::NDBin->new( axes => [ [ 'x', ... ] ] );
      $binner->feed( x => $x );
      my @labels = $binner->labels;
   The required data can also be fed directly to labels() if desired:
      my @labels = $binner->labels( x => $x );
   (Edward Baudrez)
 - process_axes() has been removed; you should use autoscale() now (see below)
   (Edward Baudrez)
 - support for DEFAULT_ACTION has been dropped; it is now required to specify
   an action for every variable (Edward Baudrez)
 - variables no longer assume a default action when none is supplied; it is now
   required to state the action explicitly for every variable. To continue to
   use the default action of producing a histogram, use the following:
      ndbin( ..., vars => [ $x, 'Count' ] );
   (Edward Baudrez)

 [New features]
 - in addition to 'step', 'min', and 'n', new() now also accepts 'max' and
   'round' in axis specifications (Edward Baudrez)
 - added a method feed() to feed data piecewise (or all at once) before calling
   process(); this can be very useful when data is being read from a file. It
   essentially separates the data feeding from the processing step (both were
   done at the same time before, in the call to process()). This also means you
   can now call process() without arguments, provided that you have already fed
   all required data before. (Edward Baudrez)
 - added a method autoscale() to have missing axis specifications derived