@@ -3,6 +3,7 @@ Revision history for PDL::NDBin
 {{$NEXT}}
 
  - started using Dist::Zilla for distribution management (Edward Baudrez)
+ - added documentation for PDL::NDBin::Iterator (Edward Baudrez)
 
 0.004 2013-02-02
 
